# tierquiz

./: .gitignore  TierQuiz.hs  animals.json  default.nix  package.json
backend/: CHANGELOG.md  LICENSE  animals.json  default.nix  package.json  server.js  stack.yaml  tierquiz-backend.cabal
backend/src/: Main.hs  Types.hs
frontend/: bower.json  default.nix  index.html  main.js
frontend/old/: Sentence.hs  TierQuiz.hs  package-lock.json  package.json
frontend/old/src/: App.js  Random.js
frontend/public/: index.html
frontend/src/: Main.purs  animals-schema.json
public/: index.html  manifest.json
src/: App.css  App.js  animals.json
